# game_of_life_cpp

./: CMakeLists.txt  Cell.cpp  Life  Life.cpp  Life.h  README.md  game_of_life.cpp  game_of_life.h  main.cpp  main.h  shell.nix
src/: game_of_life.cpp  main.cpp
